samples/_failures_safe/1761375558_625471_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f63806e6.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_f63806e6.c:168:35: error: missing terminating " character
  168 |         case TOKEN_NUMBER: printf("NUMBER
      |                                   ^~~~~~~
./samples/SAFE/__tmp_f63806e6.c:168:9: error: expected expression at end of input
  168 |         case TOKEN_NUMBER: printf("NUMBER
      |         ^~~~
./samples/SAFE/__tmp_f63806e6.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f63806e6.c:168:9: error: expected declaration or statement at end of input
